3sem/IFJ/IFJ-Project/tests/lexer/errors/test_invalid_escape_unknown.wren
// Test: Unknown escape sequence
// Expected: Lexical error (exit code 1)
// Reason: \q is not a valid escape sequence

import "ifj25" for Ifj

class Program {
    static main() {
        var message
        message = "Hello\qWorld"
        __dummy = Ifj.write(message)
    }
}

